--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,9 +4,9 @@
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;
             <span> Dashboard</span>
         </a>
-        <a [routerLink]="['/charts']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;
-            <span>Charts</span>
+        <a [routerLink]="['/aliments']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-cutlery"></i>&nbsp;
+            <span>Aliments</span>
         </a>
         <a [routerLink]="['/tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-table"></i>&nbsp;
