--- a/src/app/aliments/consumed-aliments/consumed-aliments.component.html
+++ b/src/app/aliments/consumed-aliments/consumed-aliments.component.html
@@ -4,11 +4,14 @@
   <hr>
   <div class="row">
     <div class="col-md-10 col-offset-1">
-      <app-aliment-el
+      <app-consaliment-el
         *ngFor="let al of AlimentstoAddToDayAss; let i = index"
-        [aliment]="al"
-      ></app-aliment-el>
+        [aliment]="al.al"
+        [quantity]="al.qty"
+        [index] = i
+      ></app-consaliment-el>
     </div>
   </div>
-
+{{CalsIn}}
+  <button (click)="submit()" class="btn btn-success">Submit</button>
 </div>
