--- a/src/styles/bootstrap/_input-group.scss
+++ b/src/styles/bootstrap/_input-group.scss
@@ -16,7 +16,7 @@
   .custom-file {
     position: relative; // For focus state's z-index
     flex: 1 1 auto;
-    // Add width 1% and flex-basis auto to ensure that button will not wrap out
+    // Add width 1% and flex-basis auto to ensure that button will not wrapWorkout out
     // the column. Applies to IE Edge+ and Firefox. Chrome does not require this.
     width: 1%;
     margin-bottom: 0;
