--- a/src/app/workout/wrapWorkout/wrapworkout.component.html
+++ b/src/app/workout/wrapWorkout/wrapworkout.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <div class="col-md-5 col-md-offset-1">
-    <app-done-workouts></app-done-workouts>
+    <app-done-workout></app-done-workout>
   </div>
 </div>
