--- a/src/styles/bootstrap/_navbar.scss
+++ b/src/styles/bootstrap/_navbar.scss
@@ -94,7 +94,7 @@
 // Powered by the collapse Bootstrap JavaScript plugin.
 
 // When collapsed, prevent the toggleable navbar contents from appearing in
-// the default flexbox row orienation. Requires the use of `flex-wrap: wrap`
+// the default flexbox row orienation. Requires the use of `flex-wrapWorkout: wrapWorkout`
 // on the `.navbar` parent.
 .navbar-collapse {
   flex-basis: 100%;
