--- a/src/app/workout/workout-el/workout-el.component.html
+++ b/src/app/workout/workout-el/workout-el.component.html
@@ -12,7 +12,7 @@
 
          id="qty" type="number"
          style="width: 50px"
-         [(ngModel)] = "duration"
+         [(ngModel)] = "qty"
        >
            <button class ="btn btn-info" (click)="add()">+</button>
       </span>
