--- a/src/app/workout/workout-list/workout-list.component.html
+++ b/src/app/workout/workout-list/workout-list.component.html
@@ -8,7 +8,7 @@
            [ngModelOptions]="{standalone: true}"
            placeholder="Search for..."
            required
-           (keyup)="searchByReg(workoutn)"
+           (keyup)="searchByReg()"
     >
     <button type="submit" value="go" id="submit" (click)="search(workoutn)">GO</button>
   </p>
