--- a/src/app/workout/workout-todo/workout-todo.component.html
+++ b/src/app/workout/workout-todo/workout-todo.component.html
@@ -4,12 +4,12 @@
   class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ workout.name }}</h4>
-    <p class="list-group-item-text">{{this.workout.kcal * this.duration}} Kcal</p>
+    <p class="list-group-item-text">{{this.workout.kcal * this.qty}} Kcal</p>
   </div>
   <span class="pull-right">
        <label for="qty">quantity</label>
        <input
-         [(ngModel)] = "duration"
+         [(ngModel)] = "qty"
          id="qty" type="number"
          style="width: 50px"
          disabled
