--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -121,7 +121,7 @@
               <div class="form-group">
 
                   <select  id="activity_lvl" name="activity_lvl"  ngModel class="grey_color" required >
-                    <option value="N"  selected> Activity Level</option>
+<!--                    <option value="N"  selected> Activity Level</option>-->
                     <option value="S"  > Sedentary Person</option>
                     <option value="M" > Moderately Active Person </option>
                     <option value="A" > Active Person </option>
