--- a/src/app/user/edit-user/edit-user.component.html
+++ b/src/app/user/edit-user/edit-user.component.html
@@ -112,12 +112,12 @@
           </div>
 
           <div class="form-group">
-            <input type="text"
-                   class="form-control input-underline input-lg"
-                   id="diet_pace"
-                   ngModel
-                   name="diet_pace"
-                   placeholder="diet pace">
+<!--            <input type="text"-->
+<!--                   class="form-control input-underline input-lg"-->
+<!--                   id="diet_pace"-->
+<!--                   ngModel-->
+<!--                   name="diet_pace"-->
+<!--                   placeholder="diet pace">-->
 
         <button class="btn rounded-btn" type="submit">Register</button>
           </div>
