--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -155,7 +155,8 @@
             </div>
           </div>
           -->
-          <button class="btn rounded-btn" type="submit">Register</button>&nbsp;
+              <div class="warning" *ngIf="error==true">{{ERROR_MSG}}</div>
+              <button class="btn rounded-btn" type="submit">Register</button>&nbsp;
 
             </div>
           </div>
