--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -14,6 +14,12 @@
         </div>
     </div>
     <hr>
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+        <h2 style="color:dodgerblue; font-family: arial"> We predict that your weight will be {{predctedWeight|number}} Kg in the next 5 weeks.</h2>
+    </div>
+  </div>
+  <hr>
     <div class="row">
         <div class="col-md-4">
           <ngx-gauge [type]="gaugeType"
