--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,9 +1,15 @@
+<head>
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
+</head>
+
+
 
 <div class="container">
+
   <h2>Welcome {{user.firstName}} {{user.lastName}} </h2>
 
   <div class="row">
@@ -91,11 +97,6 @@
         });
       });
     </script>
-
-
-
-
-
 
 
 
